linuxmuster-cachingserver-server (1.0.3-0) lmn72-testing; urgency=low

  * update

 -- Lukas Spitznagel <lukas.spitznagel@netzint.de>  Tue, 23 Feb 2023 17:28:00 +0200

linuxmuster-cachingserver-server (1.0.2-0) lmn72-testing; urgency=low

  * fix error while install

 -- Lukas Spitznagel <lukas.spitznagel@netzint.de>  Tue, 22 Feb 2023 17:28:00 +0200

linuxmuster-cachingserver-server (1.0.1-0) lmn72-testing; urgency=low

  * add server ip and port to install script

 -- Lukas Spitznagel <lukas.spitznagel@netzint.de>  Tue, 21 Feb 2023 17:28:00 +0200

linuxmuster-cachingserver-server (1.0.0-0) lmn72-testing; urgency=low

  * initial upload

 -- Lukas Spitznagel <lukas.spitznagel@netzint.de>  Tue, 21 Feb 2023 17:28:00 +0200